// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`count and total 0 expenses 1`] = `
<div>
  Viewing 
  0
   expense(s) totalling 
  £0.00
   
</div>
`;

exports[`count and total 1 expense 1`] = `
<div>
  Viewing 
  1
   expense(s) totalling 
  £1.95
   
</div>
`;

exports[`count and total 2 expenses 1`] = `
<div>
  Viewing 
  3
   expense(s) totalling 
  £1,141.95
   
</div>
`;
